
2021-02-10  Ron Norman <rjn@inglenet.com>

	* fileio.c: Changed to use lseek with SEEK_SET as lseek using SEEK_CUR and
			a negative 'offset' was failing on Centos 6 and Solaris

2021-02-09  Ron Norman <rjn@inglenet.com>
	* fodbc.c: PostgreSQL requires a SQLCloseCursor just before SQLExecute
				if the statement had been used before.

2021-02-08  Ron Norman <rjn@inglenet.com>

	* common.h: Additional flags added to cob_file for commit/rollback
	* fileio.c: Numerous changes to support commit/rollback for all files
	* fileio.h: 'gentable' removed as table is created if not present
	* foci.c: Fix to set TIME and TIMESTAMP column types
	* fodbc.c: Fix to set TIME and TIMESTAMP column types
	* fsqlxfd.c: Removed heck for 'gentable'

2021-02-02  Ron Norman <rjn@inglenet.com>

	* fileio.c: Fixed to set default file sharing as the COBOL standard
				Set flag to request commit/rollback if COB_LOCK_ROLLBACK is set
	* fodbc.c: Report line number in debuglog file a bit more often

2021-01-28  James K. Lowden  <jklowden@symas.com>

	* sysdefines.h (GC_C_VERSION): let "unknown" be token-pasted, too

2021-01-28  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle hundreds of seconds and TIME only fields

2021-01-26  Ron Norman <rjn@inglenet.com>

	* fsqlxfd.c: Fixes to handle COMP-6
			If PIC 9 field is all SPACES, then store in SQL as ZERO.
			Fix field defined as a DATE that had all zeros or nines.
			If PIC X field is LOW-VALUES then column is set to NULL

2021-01-23  Ron Norman <rjn@inglenet.com>

	* common.c: If not using --enable-debuglog then compile
			the cob_debug routines are basically empty
	* fodbc.c,fsqlxfd.c: Additional update for SQLite and now includes
			support for COMMIT/ROLLBACK

2021-01-22  Ron Norman <rjn@inglenet.com>

	* Makefile.am: corrections to changes previously made
	* fileio.c: report any error from loading a module that should be present
2021-01-22  Ron Norman <rjn@inglenet.com>

	* common.c: Add check for COB_DEBUG_LOG not defined